Adjusted z-index of canvas and exit button on paceman animation to resolve issues with search form elements showing on top of canvas

--- a/web/css/minimal.css
+++ b/web/css/minimal.css
@@ -17,14 +17,14 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    z-index: 2;
+    z-index: 5;
 }
 
 #pacman-exit-button {
     position: absolute;
     top: 10px;
     left: 10px;
-    z-index: 3;
+    z-index: 6;
 }
 
 body {
